cpp/InternetExplorerDriver/webdriver.h


struct WebDriver;

typedef struct WebDriver WebDriver;


struct WebElement;

typedef struct WebElement WebElement;


struct ScriptArgs;

typedef struct ScriptArgs ScriptArgs;


struct ScriptResult;

typedef struct ScriptResult ScriptResult;


struct StringWrapper;

typedef struct StringWrapper StringWrapper;


struct ElementCollection;

typedef struct ElementCollection ElementCollection;


struct StringCollection;

typedef struct StringCollection StringCollection;


// Memory management functions
EXPORT int wdNewDriverInstance(WebDriver** result);

EXPORT int wdFreeDriver(WebDriver* driver);

EXPORT int wdeFreeElement(WebElement* element);

EXPORT int wdFreeElementCollection(ElementCollection* collection, int alsoFreeElements);

EXPORT int wdFreeStringCollection(StringCollection* collection);

EXPORT int wdFreeScriptArgs(ScriptArgs* scriptArgs);

EXPORT int wdFreeScriptResult(ScriptResult* scriptResult);


// WebDriver functions
EXPORT int wdNewDriverInstance(WebDriver** result);

EXPORT int wdFreeDriver(WebDriver* driver);


EXPORT int wdGet(WebDriver* driver, const wchar_t* url);

EXPORT int wdGoBack(WebDriver* driver);

EXPORT int wdGoForward(WebDriver* driver);

EXPORT int wdRefresh(WebDriver* driver);

EXPORT int wdClose(WebDriver* driver);

EXPORT int wdGetVisible(WebDriver* driver, int* visible);

EXPORT int wdSetVisible(WebDriver* driver, int value);


EXPORT int wdGetCurrentUrl(WebDriver* driver, StringWrapper** result);

EXPORT int wdGetTitle(WebDriver* driver, StringWrapper** result);

EXPORT int wdGetPageSource(WebDriver* driver, StringWrapper** result);


EXPORT int wdGetCookies(WebDriver* driver, StringWrapper** result);

EXPORT int wdAddCookie(WebDriver* driver, const wchar_t* cookie);


EXPORT int wdSwitchToActiveElement(WebDriver* driver, WebElement** result);

EXPORT int wdSwitchToWindow(WebDriver* driver, const wchar_t* name);

EXPORT int wdSwitchToFrame(WebDriver* driver, const wchar_t* path);

EXPORT int wdWaitForLoadToComplete(WebDriver* driver);


EXPORT int wdGetAllWindowHandles(WebDriver* driver, StringCollection** handles);

EXPORT int wdGetCurrentWindowHandle(WebDriver* driver, StringWrapper** handle);


// Element functions
EXPORT int wdeClick(WebElement* element);

EXPORT int wdeGetAttribute(WebDriver* driver, WebElement* element, const wchar_t* string, StringWrapper** result);

EXPORT int wdeGetValueOfCssProperty(WebElement* element, const wchar_t* name, StringWrapper** result);

EXPORT int wdeGetText(WebElement* element, StringWrapper** result);

EXPORT int wdeGetTagName(WebElement* element, StringWrapper** result);

EXPORT int wdeIsSelected(WebElement* element, int* result);

EXPORT int wdeSetSelected(WebElement* element);

EXPORT int wdeToggle(WebElement* element, int* result);

EXPORT int wdeIsEnabled(WebElement* element, int* result);

EXPORT int wdeIsDisplayed(WebElement* element, int* result);

EXPORT int wdeSendKeys(WebElement* element, const wchar_t* text);

EXPORT int wdeClear(WebElement* element);

EXPORT int wdeSubmit(WebElement* element);


EXPORT int wdeGetDetailsOnceScrolledOnToScreen(WebElement* element, HWND* hwnd, long* x, long* y, long* width, long* height);

EXPORT int wdeGetLocation(WebElement* element, long* x, long* y);

EXPORT int wdeGetSize(WebElement* element, long* width, long* height);


// Element locating functions
EXPORT int wdFindElementById(WebDriver* driver, WebElement* element, const wchar_t* id, WebElement** result);

EXPORT int wdFindElementsById(WebDriver* driver, WebElement* element, const wchar_t* id, ElementCollection** result);


EXPORT int wdFindElementByClassName(WebDriver* driver, WebElement* element, const wchar_t* className, WebElement** result);

EXPORT int wdFindElementsByClassName(WebDriver* driver, WebElement* element, const wchar_t* className, ElementCollection** result);


EXPORT int wdFindElementByLinkText(WebDriver* driver, WebElement* element, const wchar_t* linkText, WebElement** result);

EXPORT int wdFindElementsByLinkText(WebDriver* driver, WebElement* element, const wchar_t* linkText, ElementCollection** result);

EXPORT int wdFindElementByPartialLinkText(WebDriver* driver, WebElement* element, const wchar_t* linkText, WebElement** result);

EXPORT int wdFindElementsByPartialLinkText(WebDriver* driver, WebElement* element, const wchar_t* linkText, ElementCollection** result);


EXPORT int wdFindElementByName(WebDriver* driver, WebElement* element, const wchar_t* name, WebElement** result);

EXPORT int wdFindElementsByName(WebDriver* driver, WebElement* element, const wchar_t* name, ElementCollection** result);


EXPORT int wdFindElementByTagName(WebDriver* driver, WebElement* element, const wchar_t* name, WebElement** result);


// Screenshot capturing
EXPORT int wdCaptureScreenshotAsBase64(WebDriver* driver, StringWrapper** result);